Adrien Fradin's paper on Dual Local SGD

--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
           
 <h1> Prepared in 2025 </h1>
 
+[288] 
+Adrien Fradin, Peter Richtárik, and Alexander Tyurin<br>
+<b>Local SGD and federated averaging through the lens of time complexity</b><br>
+[<a href="https://arxiv.org/abs/2509.23207">arXiv</a>] [method: Dual Local SGD, Decaying Local SGD, Decaying Local ASGD] <br><br> 
+
 [287] 
 Artavazd Maranjyan and Peter Richtárik<br>
 <b>Ringleader ASGD: The first asynchronous SGD with optimal time complexity under data heterogeneity</b><br>
