--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,16 @@
           
 <h1> Prepared in 2025 </h1>
 
+[290] 
+Kaja Gruntkowska and Peter Richtárik<br>
+<b>Non-Euclidean broximal point method: a blueprint for geometry-aware optimization</b><br>
+[<a href="https://arxiv.org/abs/2510.00823">arXiv</a>] [method: BPM] <br><br> 
+
+[289] 
+Kaja Gruntkowska, Alexander Gaponov, Zhirayr Tovmasyan, and Peter Richtárik<br>
+<b>Error feedback for Muon and friends</b><br>
+[<a href="https://arxiv.org/abs/2510.00643">arXiv</a>] [method: EF21-Muon] <br><br> 
+
 [288] 
 Adrien Fradin, Peter Richtárik, and Alexander Tyurin<br>
 <b>Local SGD and federated averaging through the lens of time complexity</b><br>
