update Drop Muon

--- a/i_papers.html
+++ b/i_papers.html
@@ -50,24 +50,35 @@
           
 <h1> Prepared in 2025 </h1>
 
+[291] 
+Kaja Gruntkowska, Yassine Maziane, Zheng Qu, and Peter Richtárik<br>
+<b>Drop-Muon: Update less, converge faster</b><br>
+<span class="important">Muon Paper</span><br> 
+[<a href="https://arxiv.org/abs/2510.02239">arXiv</a>] [method: Drop-Muon] <br><br> 
+
 [290] 
 Kaja Gruntkowska and Peter Richtárik<br>
 <b>Non-Euclidean broximal point method: a blueprint for geometry-aware optimization</b><br>
+<span class="important">Muon Paper</span><br> 
 [<a href="https://arxiv.org/abs/2510.00823">arXiv</a>] [method: BPM] <br><br> 
 
 [289] 
 Kaja Gruntkowska, Alexander Gaponov, Zhirayr Tovmasyan, and Peter Richtárik<br>
 <b>Error feedback for Muon and friends</b><br>
+<span class="important">Muon Paper</span><br> 
+<span class="important">Federated Learning Paper</span><br>  
 [<a href="https://arxiv.org/abs/2510.00643">arXiv</a>] [method: EF21-Muon] <br><br> 
 
 [288] 
 Adrien Fradin, Peter Richtárik, and Alexander Tyurin<br>
 <b>Local SGD and federated averaging through the lens of time complexity</b><br>
+<span class="important">Federated Learning Paper</span><br>  
 [<a href="https://arxiv.org/abs/2509.23207">arXiv</a>] [method: Dual Local SGD, Decaying Local SGD, Decaying Local ASGD] <br><br> 
 
 [287] 
 Artavazd Maranjyan and Peter Richtárik<br>
 <b>Ringleader ASGD: The first asynchronous SGD with optimal time complexity under data heterogeneity</b><br>
+<span class="important">Asynchronous Optimization</span><br>  
 [<a href="https://arxiv.org/abs/2509.22860">arXiv</a>] [method: Ringleader ASGD] <br><br> 
 
 [286] 
@@ -83,8 +94,8 @@ Igor Sokolov, Abdurakhmon Sadiev, Yury Demidovich, Fawaz S Al-Qahtani, and Peter
 
 [284] 
 Artem Riabinin, Egor Shulgin, Kaja Gruntkowska, and Peter Richtárik<br>
-<b>Gluon: making Muon & Scion great again! (bridging theory and practice of LMO-based optimizers for LLMs)</b><br>
-<span class="important">LLM Paper</span><br> 
+<b>Gluon: Making Muon & Scion great again! (bridging theory and practice of LMO-based optimizers for LLMs)</b><br>
+<span class="important">Muon Paper</span><br> 
 [<a href="https://arxiv.org/abs/2505.13416">arXiv</a>] [method: Gluon, Muon, Scion] <br><br> 
 
 [283] 
