--- a/i_talks.html
+++ b/i_talks.html
@@ -50,6 +50,10 @@ ELLIIT Symposium on Optimization for Learning, May 6-8, 2026, Lund, Sweden (invi
 </p>
 
 <p>
+<a href="https://iclr.cc/Conferences/2026">ICLR 2026</a>, April 23-27, 2026, Rio de Janeiro, Brazil
+</p>
+
+<p>
 <a href="https://simons.berkeley.edu/workshops/learning-heterogeneous-sources#simons-tabs">Workshop on Learning from Heterogeneous Sources</a>, Simons Institute, Berkeley, February 23-27, 2026 (invited by Virginia Smith)
 </p>
 
