--- a/i_talks.html
+++ b/i_talks.html
@@ -46,11 +46,19 @@
 <h1>Future Talks</h1>
 
 <p>
-ELLIIT Symposium on Optimization for Learning, May 6-8, 2026, Lund, Sweden (invited speaker and member of the scientific committee)
+International Symposium on Mathematical Programming, Amsterdam, Netherlands, July 25-30, 2027
 </p>
 
 <p>
-<a href="https://iclr.cc/Conferences/2026">ICLR 2026</a>, April 23-27, 2026, Rio de Janeiro, Brazil
+<a href="https://www.siam.org/conferences-events/siam-conferences/op26/">SIAM Conference on Optimization (OP26)</a>, Edinburgh, Scotland, June 2-5, 2026
+</p>
+
+<p>
+ELLIIT Symposium on Optimization for Learning, Lund, Sweden, May 6-8, 2026 (invited speaker and member of the scientific committee)
+</p>
+
+<p>
+<a href="https://iclr.cc/Conferences/2026">ICLR 2026</a>, Rio de Janeiro, Brazil, April 23-27, 2026
 </p>
 
 <p>
