--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
           
 <h1> Prepared in 2025 </h1>
 
+[292] 
+Abdurakhmon Sadiev, Peter Richtárik, and Ilyas Fatkhullin<br>
+<b>Second-order optimization under heavy-tailed noise: Hessian clipping and sample complexity limits</b><br>
+[<a href="https://arxiv.org/abs/2510.10690">arXiv</a>] [method: NSGDHess,  Clip-NSGDHess] <br><br> 
+
 [291] 
 Kaja Gruntkowska, Yassine Maziane, Zheng Qu, and Peter Richtárik<br>
 <b>Drop-Muon: Update less, converge faster</b><br>
