--- a/index.html
+++ b/index.html
@@ -45,6 +45,59 @@
         <div id="content">
 
 
+
+<h3>October 13, 2025</h3>
+
+<h1>FLTA @ Dubrovnik, Croatia</h1>
+  
+I am in Dubrovnik, Croatia, attending <a href="https://flta-conference.org/flta-2025/">The 3rd IEEE International Conference on Federated Learning Technologies and Applications (FLTA 2025)</a>, organized by Feras M. Awaysheh (Tartu, Estonia). Together with Sebastián Ventura, I am the General Chair of the conference. On October 15, I will give the opening <a href="https://flta-conference.org/flta-2025/speakers.php">keynote talk</a> entitled "Handling Device Heterogeneity in Federated Learning: First Optimal Parallel SGD Methods in the Presence of Data, Compute and/or Communication Heterogeneity".  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>October 12, 2025</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2510.10690">
+"Second-order Optimization under Heavy-Tailed Noise: Hessian Clipping and Sample Complexity Limits"</a> -
+joint work with Abdurakhmon Sadiev and Ilyas Fatkhullin.
+<br>
+<br>
+  
+Abstract: <i>Heavy-tailed noise is pervasive in modern machine learning applications, arising from data heterogeneity, outliers, and non-stationary stochastic environments. While second-order methods can significantly accelerate convergence in light-tailed or bounded-noise settings, such algorithms are often brittle and lack guarantees under heavy-tailed noise -- precisely the regimes where robustness is most critical. In this work, we take a first step toward a theoretical understanding of second-order optimization under heavy-tailed noise. We consider a setting where stochastic gradients and Hessians have only bounded p-th moments, for some p ∈ (1,2], and establish tight lower bounds on the sample complexity of any second-order method. We then develop a variant of normalized stochastic gradient descent that leverages second-order information and provably matches these lower bounds. To address the instability caused by large deviations, we introduce a novel algorithm based on gradient and Hessian clipping, and prove high-probability upper bounds that nearly match the fundamental limits. Our results provide the first comprehensive sample complexity characterization for second-order optimization under heavy-tailed noise. This positions Hessian clipping as a robust and theoretically sound strategy for second-order algorithm design in heavy-tailed regimes.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+<h3>October 8, 2025</h3>
+
+<h1>Teaching at Saudi Aramco, Dhahran</h1>
+  
+I arrived to Dhahran. During October 9-12, I will be teaching the first half of "Introduction to Machine Learning" for a cohort of Saudi Aramco employees enrolled in the KAUST Master in Data Science program. My TAs are my PhD students Grigory Malinovsky and Igor Sokolov.
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
 <h3>October 2, 2025</h3>
 
 <h1>New Paper</h1>
