--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <h1>FLTA @ Dubrovnik, Croatia</h1>
   
-I am in Dubrovnik, Croatia, attending <a href="https://flta-conference.org/flta-2025/">The 3rd IEEE International Conference on Federated Learning Technologies and Applications (FLTA 2025)</a>, organized by Feras M. Awaysheh (Tartu, Estonia). Together with Sebastián Ventura, I am the General Chair of the conference. On October 15, I will give the opening <a href="https://flta-conference.org/flta-2025/speakers.php">keynote talk</a> entitled "Handling Device Heterogeneity in Federated Learning: First Optimal Parallel SGD Methods in the Presence of Data, Compute and/or Communication Heterogeneity".  
+I am in Dubrovnik, Croatia, attending <a href="https://flta-conference.org/flta-2025/">The 3rd IEEE International Conference on Federated Learning Technologies and Applications (FLTA 2025)</a>, organized by Feras M. Awaysheh (Umeå University, Sweden). Together with Sebastián Ventura, I am the General Chair of the conference. On October 15, I will give the opening <a href="https://flta-conference.org/flta-2025/speakers.php">keynote talk</a> entitled "Handling Device Heterogeneity in Federated Learning: First Optimal Parallel SGD Methods in the Presence of Data, Compute and/or Communication Heterogeneity".  
 <br>
 
 <br>
