--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
           
 <h1> Prepared in 2025 </h1>
 
+[293] 
+Egor Shulgin, Sultan AlRashed, Francesco Orabona, and Peter Richtárik<br>
+<b>Beyond the ideal: Analyzing the inexact Muon update</b><br>
+[<a href="https://arxiv.org/abs/2510.19933">arXiv</a>] [method: Muon] <br><br> 
+
 [292] 
 Abdurakhmon Sadiev, Peter Richtárik, and Ilyas Fatkhullin<br>
 <b>Second-order optimization under heavy-tailed noise: Hessian clipping and sample complexity limits</b><br>
