--- a/i_papers.html
+++ b/i_papers.html
@@ -356,6 +356,7 @@ Laurent Condat, Artavazd Maranjyan, and Peter Richtárik<br>
 13th International Conference on Learning Representations (ICLR 2025)
 <br>
 NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
+<span class="important">Spotlight at ICLR 2025</span><br>   
 <span class="important">Federated Learning Paper</span><br>          
 [<a href="https://arxiv.org/abs/2403.04348">arXiv</a>] [method: LoCoDL] <br><br> 
 
@@ -484,8 +485,8 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           [<a href="https://arxiv.org/abs/2305.18929">arXiv</a>] [method: Clip21-Avg, Clip21-GD, DP-Clip21-GD, Press-Clip21-GD] <br><br>  
           
           [226] Jihao Xin, Marco Canini, Peter Richtárik, and Samuel Horváth<br>
-          <b>Global-QSGD: Allreduce-compatible quantization for distributed learning with theoretical guarantees</b><br>
-          28th European Conference on Artificial Intelligence (ECAI 2025)<br>
+          <b>Quantize once, train fast: allreduce-compatible compression with provable guarantees</b><br>
+          <a href="https://ebooks.iospress.nl/volumearticle/76054">28th European Conference on Artificial Intelligence (ECAI 2025)</a><br>
           <span class="important">Federated Learning Paper</span><br>          
           [<a href="https://arxiv.org/abs/2305.18627">arXiv</a>] [method: Global-QSGD] <br>
           <br>  
