--- a/i_talks.html
+++ b/i_talks.html
@@ -58,7 +58,16 @@ ELLIIT Symposium on Optimization for Learning, Lund, Sweden, May 6-8, 2026 (invi
 </p>
 
 <p>
+<a href="http://www.icmiconf.com">IEEE 5th International Conference on Computing and Machine Intelligence (ICMI 2026)</a>, King Faisal University in Al-Ahsa, Kingdom of Saudi Arabia, April 7-10, 2026 (keynote)
+</p>
+
+<p>
 <a href="https://iclr.cc/Conferences/2026">ICLR 2026</a>, Rio de Janeiro, Brazil, April 23-27, 2026
+</p>
+
+<p>
+<a href="https://www.icmiconf.com">IEEE 5th International Conference on Computing and Machine Intelligence  (ICMI 2026)</a>, King Faisal University, Al Ahsa, Saudi Arabia, 
+April 7-10, 2026 ()
 </p>
 
 <p>
@@ -70,20 +79,21 @@ Bootcamp, Simons Institute Program on <a href="https://simons.berkeley.edu/progr
 </p>
 
 <p>
-KAUST Workshop on Distributed Training in the Era of Large Models, November 24-25, 2025, KAUST, Thuwal, Saudi Arabia (organizer and speaker)
+<a href="https://www.kaust.edu.sa/events/dtelm25/">KAUST Workshop on Distributed Training in the Era of Large Models</a>, November 24-25, 2025, KAUST, Thuwal, Saudi Arabia (organizer and speaker)
 </p>
-
-<p>
-Introduction to Machine Learning 2/2, Aramco, October 30 - November 2, 2025 (24 hours)
-</p>
-
-<p>
-<a href="https://flta-conference.org/flta-2025/">The 3rd IEEE International Conference on Federated Learning Technologies and Applications</a> (FLTA 2025),  Dubrovnik, Croatia, October 14-17, 2025 (General Chair)
-</p>
-
 
 
 <h1>2025 Talks</h1>
+
+<p>
+[275]
+Introduction to Machine Learning 2/2, Aramco, October 30-November 2, 2025 (24 hours)
+</p>
+
+<p>
+[274]
+<a href="https://flta-conference.org/flta-2025/">The 3rd IEEE International Conference on Federated Learning Technologies and Applications</a> (FLTA 2025),  Dubrovnik, Croatia, October 14-17, 2025 (General Chair)
+</p>
 
 <p>
 [273]
