--- a/index.html
+++ b/index.html
@@ -46,6 +46,44 @@
 
 
 
+<h3>November 19, 2025</h3>
+
+<h1>KAUST Workshop on Distributed Training in the Era of Large Models</h1>
+
+Together with Kaja Gruntkowska, Laurent Condat and Egor Shulgin, I am organizing <a href="https://www.kaust.edu.sa/events/dtelm25/">KAUST Workshop on Distributed Training in the Era of Large Models</a>, to be held at KAUST, Saudi Arabia, during November 24-26, 2025.
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+<h3>November 18, 2025</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2511.14501">
+"Improved Convergence in Parameter-Agnostic Error Feedback through Momentum"</a> -
+joint work with Abdurakhmon Sadiev, Yury Demidovich, Igor Sokolov, Grigory Malinovsky, and Sarit Khirirat.
+<br>
+<br>
+  
+Abstract: <i>Communication compression is essential for scalable distributed training of modern machine learning models, but it often degrades convergence due to the noise it introduces. Error Feedback (EF) mechanisms are widely adopted to mitigate this issue of distributed compression algorithms. Despite their popularity and training efficiency, existing distributed EF algorithms often require prior knowledge of problem parameters (e.g., smoothness constants) to fine-tune stepsizes. This limits their practical applicability especially in large-scale neural network training. In this paper, we study normalized error feedback algorithms that combine EF with normalized updates, various momentum variants, and parameter-agnostic, time-varying stepsizes, thus eliminating the need for problem-dependent tuning. We analyze the convergence of these algorithms for minimizing smooth functions, and establish parameter-agnostic complexity bounds that are close to the best-known bounds with carefully-tuned problem-dependent stepsizes. Specifically, we show that normalized EF21 achieve the convergence rate of near $O(1/T^{1/4})$ for Polyak's heavy-ball momentum, $O(1/T^{2/7})$ for Iterative Gradient Transport (IGT), and $O(1/T^{1/3})$ for STORM and Hessian-corrected momentum. Our results hold with decreasing stepsizes and small mini-batches. Finally, our empirical experiments confirm our theoretical insights.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>October 22, 2025</h3>
 
 <h1>New Paper</h1>
