--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
           
 <h1> Prepared in 2025 </h1>
 
+[294] 
+Abdurakhmon Sadiev, Yury Demidovich, Igor Sokolov, Grigory Malinovsky, Sarit Khirirat, and Peter Richtárik<br>
+<b>Improved convergence in parameter-agnostic error feedback through momentum</b><br>
+[<a href="https://arxiv.org/abs/2511.14501">arXiv</a>] [method: ‖ EF21-SGDM ‖, ‖ EF21-IGT ‖, ‖ EF21-RHM ‖, ‖ EF21-HM ‖, ‖ EF21-MVR ‖] <br><br> 
+
 [293] 
 Egor Shulgin, Sultan AlRashed, Francesco Orabona, and Peter Richtárik<br>
 <b>Beyond the ideal: Analyzing the inexact Muon update</b><br>
@@ -152,7 +157,7 @@ Zhirayr Tovmasyan, Grigory Malinovsky, Laurent Condat, and Peter Richtárik<br>
 [275] 
 Kaja Gruntkowska, Hanmin Li, Aadi Rane, and Peter Richtárik<br>
 <b>The ball-proximal (="broximal") point method: a new algorithm, convergence theory, and applications</b><br>
-[<a href="https://arxiv.org/abs/2502.02002">arXiv</a>] [method: BPM, || PPM || ] <br><br> 
+[<a href="https://arxiv.org/abs/2502.02002">arXiv</a>] [method: BPM, ‖ PPM ‖ ] <br><br> 
 
 [274] 
 Artavazd Maranjyan, El Mehdi Saad, Peter Richtárik, and Francesco Orabona<br>
@@ -217,7 +222,7 @@ Sarit Khirirat, Abdurakhmon Sadiev, Artem Riabinin, Eduard Gorbunov, and Peter R
 <b>Error feedback under $(L_0,L_1)$-smoothness: normalization and momentum </b><br>
 Advances in Neural Information Processing Systems 39 (NeurIPS 2025)</a> <br>
 <span class="important">Federated Learning Paper</span><br>   
-[<a href="https://arxiv.org/abs/2410.16871">arXiv</a>] [method: ||EF21||, ||EF21-SGDM||] <br><br> 
+[<a href="https://arxiv.org/abs/2410.16871">arXiv</a>] [method: ‖ EF21‖, ‖ EF21-SGDM ‖] <br><br> 
 
 [264] 
 Wojciech Anyszka, Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik<br>
