--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,18 @@
           
 <h1> Prepared in 2025 </h1>
 
+[296] 
+Xun Qian, Hussein Rammal, Dmitry Kovalev, and Peter Richtárik<br>
+<b>Muon is provably faster with momentum variance reduction</b><br>
+<span class="important">Muon Paper</span><br> 
+[<a href="https://arxiv.org/abs/2512.16598">arXiv</a>] [method: Muon-MVR, Gluon-MVR-1, Gluon-MVR-2, Gluon-MVR-3] <br><br> 
+
+[295] 
+Sarit Khirirat, Abdurakhmon Sadiev, Yury Demidovich, and Peter Richtárik<br>
+<b>Better LMO-based momentum methods with second-order information</b><br>
+<span class="important">Muon Paper</span><br> 
+[<a href="https://arxiv.org/abs/2512.13227">arXiv</a>] [method: LMO-SOM] <br><br> 
+
 [294] 
 Abdurakhmon Sadiev, Yury Demidovich, Igor Sokolov, Grigory Malinovsky, Sarit Khirirat, and Peter Richtárik<br>
 <b>Improved convergence in parameter-agnostic error feedback through momentum</b><br>
