--- a/index.html
+++ b/index.html
@@ -45,6 +45,67 @@
         <div id="content">
 
 
+<h3>December 18, 2025</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2512.16598">
+"Muon is Provably Faster with Momentum Variance Reduction"</a> -
+joint work with Xun Qian, Hussein Rammal, and Dmitry Kovalev.
+<br>
+<br>
+  
+Abstract: <i>Recent empirical research has demonstrated that deep learning optimizers based on the linear minimization oracle (LMO) over specifically chosen Non-Euclidean norm balls, such as Muon and Scion, outperform Adam-type methods in the training of large language models. In this work, we show that such optimizers can be provably improved by replacing their vanilla momentum by momentum variance reduction (MVR). Instead of proposing and analyzing MVR variants of Muon and Scion separately, we incorporate MVR into the recently proposed Gluon framework, which captures Muon, Scion and other specific Non-Euclidean LMO-based methods as special cases, and at the same time works with a more general smoothness assumption which better captures the layer-wise structure of neural networks. In the non-convex case, we incorporate MVR into Gluon in three different ways. All of them improve the convergence rate from O(1/K^{1/4}) to O(1/K^{1/3}). Additionally, we provide improved rates in the star-convex case. Finally, we conduct several numerical experiments that verify the superior performance of our proposed algorithms in terms of iteration complexity.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>December 15, 2025</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2512.13227">
+"Better LMO-based Momentum Methods with Second-Order Information"</a> -
+joint work with Sarit Khirirat, Abdurakhmon Sadiev, and Yury Demidovich.
+<br>
+<br>
+  
+Abstract: <i>The use of momentum in stochastic optimization algorithms has shown empirical success across a range of machine learning tasks. Recently, a new class of stochastic momentum algorithms has emerged within the Linear Minimization Oracle (LMO) framework--leading to state-of-the-art methods, such as Muon, Scion, and Gluon, that effectively solve deep neural network training problems. However, traditional stochastic momentum methods offer convergence guarantees no better than the O(K^{-1/4}) rate. While several approaches--such as Hessian-Corrected Momentum (HCM)--have aimed to improve this rate, their theoretical results are generally restricted to the Euclidean norm setting. This limitation hinders their applicability in problems, where arbitrary norms are often required. In this paper, we extend the LMO-based framework by integrating HCM, and provide convergence guarantees under relaxed smoothness and arbitrary norm settings. We establish improved convergence rates of O(K^{-1/3}) for HCM, which can adapt to the geometry of the problem and achieve a faster rate than traditional momentum. Experimental results on training Multi-Layer Perceptrons (MLPs) and Long Short-Term Memory (LSTM) networks verify our theoretical observations.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+<h3>December 11, 2025</h3>
+
+<h1>End of the Fall semester at KAUST</h1>
+
+The Fall semester just ended at KAUST. Next week is the exam week, so it's not all over yet! The final exam for my CS 331 ("Stochastic gradient descent methods") class will be pen-and-paper only; no electronic devices allowed. With weekly assignments that take 3 days to complete on average, the workload for this course is heavy, and the course should really be worth 6 credits instead of 3. On the other hand, the students learned a lot, and will reap the 
+
+Teaching-wise, this has been the busiest semester for me so far: I have taught 3 courses, and run the CS graduate seminar.
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
 
 <h3>November 19, 2025</h3>
 
