--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,17 @@
           
 <h1> Prepared in 2025 </h1>
 
+[298] 
+Egor Shulgin, Grigory Malinovsky, Sarit Khirirat, and Peter Richtárik<br>
+<b>First provable guarantees for practical private FL: beyond restrictive assumptions</b><br>
+<span class="important">Federated Learning Paper</span><br>  
+[<a href="https://arxiv.org/abs/2512.21521">arXiv</a>] [method: Fed-α-NormEC, DP-Fed-α-NormEC] <br><br> 
+
+[297] 
+Adrien Fradin, Abdurakhmon Sadiev, Laurent Condat, and Peter Richtárik<br>
+<b>Tight lower bounds and optimal algorithms for stochastic nonconvex optimization with heavy-tailed noise</b><br>
+[<a href="https://arxiv.org/abs/2512.18713">arXiv</a>] [method: NSGD-MVR, NSGD-Hess, D-clip-NSGD-MVR, Clipped NSGD-Hess, SGD-MVR] <br><br> 
+
 [296] 
 Xun Qian, Hussein Rammal, Dmitry Kovalev, and Peter Richtárik<br>
 <b>Muon is provably faster with momentum variance reduction</b><br>
