--- a/index.html
+++ b/index.html
@@ -45,6 +45,52 @@
         <div id="content">
 
 
+<h3>December 25, 2025</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2512.21521">
+"First Provable Guarantees for Practical Private FL: Beyond Restrictive Assumptions"</a> -
+joint work with Egor Shulgin, Grigory Malinovsky, and Sarit Khirirat.
+<br>
+<br>
+  
+Abstract: <i>Federated Learning (FL) enables collaborative training on decentralized data. Differential privacy (DP) is crucial for FL, but current private methods often rely on unrealistic assumptions (e.g., bounded gradients or heterogeneity), hindering practical application. Existing works that relax these assumptions typically neglect practical FL features, including multiple local updates and partial client participation. We introduce Fed-α-NormEC, the first differentially private FL framework providing provable convergence and DP guarantees under standard assumptions while fully supporting these practical features. Fed-α-NormE integrates local updates (full and incremental gradient steps), separate server and client stepsizes, and, crucially, partial client participation, which is essential for real-world deployment and vital for privacy amplification. Our theoretical guarantees are corroborated by experiments on private deep learning tasks.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>December 21, 2025</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2512.18713">
+"Tight Lower Bounds and Optimal Algorithms for Stochastic Nonconvex Optimization with Heavy-Tailed Noise"</a> -
+joint work with Adrien Fradin, Abdurakhmon Sadiev, and Laurent Condat.
+<br>
+<br>
+  
+Abstract: <i>We study stochastic nonconvex optimization under heavy-tailed noise. In this setting, the stochastic gradients only have bounded p--th central moment (p--BCM) for some p∈(1,2]. Building on the foundational work of Arjevani et al. (2022) in stochastic optimization, we establish tight sample complexity lower bounds for all first-order methods under relaxed mean-squared smoothness (q-WAS) and δ-similarity ((q,δ)-S) assumptions, allowing any exponent q∈[1,2] instead of the standard q=2. These results substantially broaden the scope of existing lower bounds. To complement them, we show that Normalized Stochastic Gradient Descent with Momentum Variance Reduction (NSGD-MVR), a known algorithm, matches these bounds in expectation. Beyond expectation guarantees, we introduce a new algorithm, Double-Clipped NSGD-MVR, which allows the derivation of high-probability convergence rates under weaker assumptions than previous works. Finally, for second-order methods with stochastic Hessians satisfying bounded q-th central moment assumptions for some exponent q∈[1,2] (allowing q≠p), we establish sharper lower bounds than previous works while improving over Sadiev et al. (2025) (where only p=q is considered) and yielding stronger convergence exponents. Together, these results provide a nearly complete complexity characterization of stochastic nonconvex optimization in heavy-tailed regimes.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>December 18, 2025</h3>
 
 <h1>New Paper</h1>
@@ -97,6 +143,24 @@ Abstract: <i>The use of momentum in stochastic optimization algorithms has shown
 The Fall semester just ended at KAUST. Next week is the exam week, so it's not all over yet! The final exam for my CS 331 ("Stochastic gradient descent methods") class will be pen-and-paper only; no electronic devices allowed. With weekly assignments that take 3 days to complete on average, the workload for this course is heavy, and the course should really be worth 6 credits instead of 3. On the other hand, the students learned a lot, and will reap the 
 
 Teaching-wise, this has been the busiest semester for me so far: I have taught 3 courses, and run the CS graduate seminar.
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+<h3>December 4, 2025</h3>
+
+<h1>Congratulations to Dr. Artavazd Maranjyan!</h1>
+
+Arto's PhD dissertation, <a href="https://repository.kaust.edu.sa/items/202abb84-8fe4-4d0c-af25-bd8b7fbea2a6">"First Provably Optimal Asynchronous SGD for Homogeneous and Heterogeneous Data"</a>, gives the first time-optimal guarantees for asynchronous SGD, combining strong theory with practical algorithms aimed at making large-scale distributed training faster and more resource-efficient.
+<br>
+<br>
+
+Here is <a href="https://www.linkedin.com/feed/update/urn:li:activity:7407678578487697409/">Arto's LinkedIn post about his PhD defense.</a>
   
 <br>
 
